おうむ返しを実装

--- a/kiechan.html
+++ b/kiechan.html
@@ -50,9 +50,9 @@
     <!-- ヘッダー -->
     <footer style="margin-top: 2%; width: 100%;" class="container">
       <!-- 質問入力テキスト -->
-      <input type="text" name="input" id="input" value="ああああ" class="textinput" />
+      <input type="text" name="input" id="input" value="ああああ" class="textinput">
       <!-- 質問送信ボタン -->
-      <button type="button" name="trans" id="trans" class="btn btn-success btninput" />送信</button>
+      <button type="button" name="trans" id="trans" class="btn btn-success btninput">送信</button>
     </footer>
 
     <!-- コルのサンプル
