画像を入れ替え

--- a/public/kiechan.html
+++ b/public/kiechan.html
@@ -19,7 +19,7 @@
     <div id="scroll-area">
 
       <header class="titleheader">
-        <img src="./img/kie-chan-top.jpeg">
+        <img src="./img/kie-chan-top.jpg">
       </header>
 
       <section class="container" id="chatbody" style="width:100%;">
